[f] 104a - Fix misaligned back button on small sreen
https://www.pivotaltracker.com/story/show/107028752

--- a/common/static/sass/officer_page.sass
+++ b/common/static/sass/officer_page.sass
@@ -7,5 +7,5 @@
   .fa
     padding-right: 5px
 
-  @media (min-width: $screen-xs-min) and (max-width: $screen-sm-max)
+  @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max)
     line-height: 53px
